--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/sass": "^1.43.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.50.0"
