--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 3333"
   },
   "dependencies": {
+    "@types/json-server": "^0.14.4",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.50.0"
   },
   "devDependencies": {
