--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "json-server --watch db.json --port 3333"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@types/json-server": "^0.14.4",
     "@types/react-icons": "^3.0.0",
     "@types/react-router": "^5.1.18",
@@ -22,7 +23,8 @@
     "react-icons": "^4.3.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "sass": "^1.50.0"
+    "sass": "^1.50.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
